test/indexEmptyTuple.slq

def main() {
	x := int[42];
	y := x[()]; // error
	z := x[() ~ ()]; // error
	return y;
}
